[package]
name = "hcl-lex"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", optional = true }
smallvec = "1"

[dev-dependencies]
const_format = "0.2"
test-case = "2"

[features]
