[package]
name = "hcl-syntax"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein = "1"
rowan = "0.14"

hcl-parse = { path = "../parse", version = "0.0.0" }

[dev-dependencies]
test-case = "1"
